kubernetes/apps/ai/ollama/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.oxygn.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
spec:
  hostnames: ["ollama.oxygn.dev"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: ollama
          namespace: ai
          port: 11434
